[gd_scene load_steps=12 format=3 uid="uid://b4b7jpeikp2dd"]

[ext_resource type="Script" path="res://Sheep.gd" id="1_4vsd7"]
[ext_resource type="Texture2D" uid="uid://b0o467qh8tk7q" path="res://sheep nimations/white sheep run.png" id="2_tf4ps"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lxnbb"]
atlas = ExtResource("2_tf4ps")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flt3w"]
atlas = ExtResource("2_tf4ps")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn6di"]
atlas = ExtResource("2_tf4ps")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wrcv"]
atlas = ExtResource("2_tf4ps")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufc5h"]
atlas = ExtResource("2_tf4ps")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur4uy"]
atlas = ExtResource("2_tf4ps")
region = Rect2(0, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bvjje"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxnbb")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flt3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn6di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wrcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufc5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur4uy")
}],
"loop": true,
"name": &"new_animation",
"speed": 12.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qi8n2"]
radius = 0.25
height = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xnhkb"]
height = 1.0
radius = 6.0

[node name="Sheep" type="CharacterBody3D" groups=["boid"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
script = ExtResource("1_4vsd7")

[node name="Pivot" type="Node3D" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Pivot"]
shaded = true
alpha_cut = 1
sprite_frames = SubResource("SpriteFrames_bvjje")
animation = &"new_animation"
frame_progress = 0.931756

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_qi8n2")

[node name="Vision" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Vision"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 1.2, 0)
shape = SubResource("CylinderShape3D_xnhkb")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="Timer" type="Timer" parent="."]

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
radius = 0.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
